--- a/output/servicecards.css
+++ b/output/servicecards.css
@@ -1,28 +1,46 @@
-/* line 1, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 4, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 5% 0 5%;
+}
+
+/* line 13, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card1 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  position: relative;
   width: 100%;
   border: 1px solid grey;
   align-items: center;
 }
 
-/* line 11, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 28, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card1:hover {
   transform: translateY(10px);
   background-color: grey;
   color: white;
 }
 
-/* line 17, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 34, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card1:hover .read-more1 {
   background-color: white;
   color: grey;
 }
 
-/* line 24, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 41, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card2 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -31,21 +49,25 @@
   align-items: center;
 }
 
-/* line 34, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 56, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card2:hover {
   transform: translateY(10px);
   background-color: #4646d1;
   color: white;
 }
 
-/* line 40, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 62, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card2:hover .read-more2 {
   background-color: white;
   color: #4646d1;
 }
 
-/* line 49, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 71, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card3 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -54,21 +76,25 @@
   align-items: center;
 }
 
-/* line 59, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 86, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card3:hover {
   transform: translateY(10px);
   background-color: #25ad25;
   color: white;
 }
 
-/* line 65, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 92, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card3:hover .read-more3 {
   background-color: white;
   color: #25ad25;
 }
 
-/* line 74, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 101, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card4 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -77,21 +103,25 @@
   align-items: center;
 }
 
-/* line 84, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 116, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card4:hover {
   transform: translateY(10px);
   background-color: #f62525;
   color: white;
 }
 
-/* line 90, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 122, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card4:hover .read-more4 {
   background-color: white;
   color: #f62525;
 }
 
-/* line 99, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 131, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card5 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -100,21 +130,29 @@
   align-items: center;
 }
 
-/* line 109, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 146, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card5:hover {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   transform: translateY(10px);
   background-color: #9127cf;
   color: white;
 }
 
-/* line 115, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 157, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card5:hover .read-more5 {
   background-color: white;
   color: #9127cf;
 }
 
-/* line 124, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 166, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card6 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -123,21 +161,25 @@
   align-items: center;
 }
 
-/* line 134, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 181, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card6:hover {
   transform: translateY(10px);
   background-color: #cd4747;
   color: white;
 }
 
-/* line 140, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 187, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card6:hover .read-more6 {
   background-color: white;
   color: #cd4747;
 }
 
-/* line 149, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 196, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card7 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -146,17 +188,100 @@
   align-items: center;
 }
 
-/* line 159, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 211, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card7:hover {
   transform: translateY(10px);
   background-color: #de3917;
   color: white;
 }
 
-/* line 165, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 218, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card7:hover .read-more7 {
   background-color: white;
   color: #de3917;
+}
+
+@media (max-width: 768px) {
+  /* line 227, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+  .service-card1 .service-card2 .service-card3 .service-card4 .service-card5 .service-card6 .service-card7 {
+    width: 100%;
+  }
+}
+
+/* line 233, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card1 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #de3917;
+  align-items: center;
+  text-align: left;
+}
+
+/* line 237, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card1 h3 {
+  color: grey;
+}
+
+/* line 243, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card1:hover {
+  transform: translateY(10px);
+}
+
+/* line 248, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card2 {
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #de3917;
+  align-items: center;
+  text-align: left;
+}
+
+/* line 252, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card2 h3 {
+  color: #c82727;
+}
+
+/* line 258, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card2:hover {
+  transform: translateY(10px);
+}
+
+/* line 263, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card3 {
+  align-items: left;
+  text-align: center;
+  border-radius: 5%;
+  padding: 10%;
+  margin: 5% 0 5% 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #de3917;
+  align-items: center;
+  text-align: left;
+}
+
+/* line 268, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card3 h3 {
+  color: #e894e8;
+}
+
+/* line 274, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.news-card3:hover {
+  transform: translateY(10px);
 }
 
 /*# sourceMappingURL=servicecards.css.map */
